--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Christopher Seay"
-  avatar           : "profile.png"
+  avatar           : "profile.jpg"
   bio              : "PhD candidate at Leiden Observatory"
   location         : "Los Angeles, CA, USA"
   employer         : Leiden University
